[project]
name = "data-analysis-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.1.2",
    "langgraph>=1.0.4",
    "matplotlib>=3.10.7",
    "networkx>=3.6.1",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.27.0",
    "pyodbc>=5.3.0",
    "streamlit>=1.52.1",
    "watchdog>=6.0.0",
]
